crates/typesec-core/tests/ui/cannot_construct_capability.stderr
error[E0451]: fields `id`, `subject`, `resource_id`, `issued_at`, `expires_at`, `revocation`, `revocation_list`, `_permission` and `_resource` of struct `typesec_core::Capability` are private
  --> tests/ui/cannot_construct_capability.rs:10:9
   |
 9 |     let _cap: Capability<CanRead, GenericResource> = Capability {
   |                                                      ---------- in this type
10 |         id: unsafe { std::mem::zeroed() },
   |         ^^ private field
11 |         subject: "agent:forged".into(),
   |         ^^^^^^^ private field
12 |         resource_id: "reports/q1".into(),
   |         ^^^^^^^^^^^ private field
13 |         issued_at: SystemTime::now(),
   |         ^^^^^^^^^ private field
14 |         expires_at: SystemTime::now(),
   |         ^^^^^^^^^^ private field
15 |         revocation: None::<(RevocationEpoch, u64)>,
   |         ^^^^^^^^^^ private field
16 |         revocation_list: None::<std::sync::Arc<CapabilityRevocationList>>,
   |         ^^^^^^^^^^^^^^^ private field
17 |         _permission: PhantomData,
   |         ^^^^^^^^^^^ private field
18 |         _resource: PhantomData,
   |         ^^^^^^^^^ private field
